# latexTranslator

./: .gitignore  Dockerfile  README.md  agent.py  agent_latex.py  constants.py  context.py  docker-compose.yml  env.example  mathpix_api.py  pdf_converter_test.py  pyproject.toml  requirements.txt  translated.md  translated.txt  ui.py
api/: openai.py
functions/: latex_formatter.py
src/: agent.py  agent_latex.py  get_latex_mathpix.py  status.py  ui.py
src/api/: mathpix.py  openai.py
src/components/: customize.py  downloads.py  engine.py  title.py  translation_setting.py
src/constants/: constants.py
src/logics/: mathpix_logic.py  openai_logic.py
src/sanitization/: sanitize_llm.py
src/utils/: compile_pdf.py  misc.py  page_parser.py  payload_checker.py  set_env.py
translated_all/: master.aux  master.tex  page_002.tex  page_003.tex  page_004.tex  page_005.tex  page_006.tex  page_007.tex  page_008.tex  page_009.tex  page_010.tex  page_011.tex  page_012.tex  page_013.tex  page_014.tex  page_015.tex  page_016.tex  page_017.tex  page_018.tex  page_019.tex  page_020.tex  page_021.tex  page_022.tex  page_023.tex  page_024.tex  page_025.tex  page_026.tex  page_027.tex  page_028.tex  page_029.tex  page_030.tex  page_031.tex  page_032.tex  page_033.tex  page_034.tex  page_035.tex  page_036.tex  page_037.tex
translated_output/: master.tex  page_002.tex  page_003.tex  page_004.tex  page_005.tex  page_006.tex  page_008.tex  page_009.tex  page_010.tex  page_011.tex  page_012.tex  page_013.tex  page_014.tex  page_015.tex
