
[project]
name = "latextranslator"
version = "0.1.0"
description = ""
authors = [
    {name = "pocafup",email = "pocafup@gmail.com"}
]
requires-python = ">=3.11, <4.0.0"
dependencies = [
    "pymupdf (==1.24.9)",
    "python-dotenv (==1.0.1)",
    "tqdm (==4.66.4)",
    "requests (==2.32.3)",
    "streamlit (==1.37.1)",
    "watchdog (==4.0.1)",
    "stqdm (==0.0.5)",
    "openai (>=1.108.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
